--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "react-scripts start",
     "client": "react-scripts start",
     "server": "cd srmdb-backend && npm start",
     "build": "CI=false react-scripts build",
