--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "react-scripts start",
     "client": "react-scripts start",
     "server": "cd srmdb-backend && npm start",
-    "build": "CI=false react-scripts build",
+    "build": "cross-env CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -54,6 +54,7 @@
     "@eslint/js": "^9.34.0",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
