--- a/srmdb-backend/package.json
+++ b/srmdb-backend/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.11.0",
+    "axios": "^1.13.2",
+    "axois": "^0.0.1-security",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
